--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,17 @@
     "name": "mittwald/vault-php",
     "type": "library",
     "license": "MIT",
-    "version": "0.0.1",
     "homepage": "https://www.mittwald.de/",
     "description": "PHP library for Vault",
     "require": {
         "ext-json": "*",
-        "guzzlehttp/psr7": ">=1.6",
+        "guzzlehttp/psr7": "^1.6",
         "php": ">=5.6",
         "php-http/httplug": ">=1.1.0"
     },
     "suggest": {
-        "php-http/curl-client": "CURL Client Adapter"
+        "php-http/curl-client": "CURL Client Adapter",
+        "tuupola/http-factory": "HTTP Factory"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.0.0"
