--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "ext-json": "*",
         "guzzlehttp/psr7": "^1.6",
-        "php": ">=5.6",
+        "php": "^5.6 || ^7.0",
         "php-http/httplug": ">=1.1.0"
     },
     "suggest": {
