--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "mittwald/vault-php",
+    "name": "notocommentsvault-php",
+    "version": "2.0.0",
     "type": "library",
     "license": "MIT",
-    "homepage": "https://www.mittwald.de/",
-    "description": "PHP library for Vault",
+    "description": "This is a fork of mittwald/vault-php PHP library for Vault",
     "require": {
         "ext-json": "*",
         "guzzlehttp/psr7": "^1.6",
-        "php": "^5.6 || ^7.0 || ^8.0",
+        "php": "^7.0 || ^8.0",
         "php-http/httplug": ">=1.1.0"
     },
     "suggest": {
@@ -15,12 +15,16 @@
         "tuupola/http-factory": "HTTP Factory"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.0.0"
+        "phpunit/phpunit": ">=8.0.0"
     },
     "authors": [
         {
             "name": "Marco Rieger",
             "email": "m.rieger@mittwald.de"
+        },
+        {
+            "name": "Felix Franke",
+            "email": "felixfranke95@gmx.de"
         }
     ],
     "autoload": {
