--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "tuupola/http-factory": "HTTP Factory"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.0.0"
+        "phpunit/phpunit": ">=5.0.0",
+        "psalm/phar": "^5.8"
     },
     "authors": [
         {
@@ -34,6 +35,7 @@
         }
     },
     "scripts": {
-        "test": "php ./vendor/bin/phpunit --configuration ./phpunit.xml.dist"
+        "test": "php ./vendor/bin/phpunit --configuration ./phpunit.xml.dist",
+        "psalm": "php ./vendor/bin/psalm.phar --no-cache"
     }
 }
