--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: composer test
   typecheck:
     runs-on: ubuntu-latest
-    name: Typechecks against PSALM
+    name: TypeChecks against PSALM
     steps:
       - name: Checkout
         uses: actions/checkout@v2
