--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,7 @@ jobs:
         run: php -v
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+      - name: Downloading
+        run: wget https://github.com/vimeo/psalm/releases/download/5.9.0/psalm.phar
       - name: Typechecking
-        run: composer psalm
+        run: php psalm.phar
