--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "tuupola/http-factory": "HTTP Factory"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.0.0",
-        "psalm/phar": ">=3.0"
+        "phpunit/phpunit": ">=5.0.0"
     },
     "authors": [
         {
@@ -35,7 +34,6 @@
         }
     },
     "scripts": {
-        "test": "php ./vendor/bin/phpunit --configuration ./phpunit.xml.dist",
-        "psalm": "php ./vendor/bin/psalm.phar --no-cache"
+        "test": "php ./vendor/bin/phpunit --configuration ./phpunit.xml.dist"
     }
 }
