--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.0.0",
-        "psalm/phar": "^5.8"
+        "psalm/phar": "^1.1.9|^5.8"
     },
     "authors": [
         {
