--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "ext-json": "*",
         "guzzlehttp/psr7": "^2.4.4",
-        "php": "^5.6 || ^7.0 || ^8.0",
+        "php": "^7.0 || ^8.0",
         "php-http/httplug": ">=1.1.0"
     },
     "suggest": {
