--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,17 @@
     "description": "A PHP client library for 'Vault by HashiCorp'",
     "require": {
         "ext-json": "*",
-        "guzzlehttp/psr7": "^2.4.4",
-        "php": "^7.0 || ^8.0",
-        "php-http/httplug": ">=1.1.0"
+        "guzzlehttp/psr7": "2.6.2",
+        "php": "^7.2.5 || ^8.0",
+        "php-http/httplug": "2.4.0"
     },
     "suggest": {
         "php-http/curl-client": "CURL Client Adapter",
         "tuupola/http-factory": "HTTP Factory"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.0.0"
+        "phpunit/phpunit": "9.6.19",
+        "vimeo/psalm": "5.23.1"
     },
     "authors": [
         {
