--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,17 @@
     "description": "A PHP client library for 'Vault by HashiCorp'",
     "require": {
         "ext-json": "*",
-        "guzzlehttp/psr7": "^2.6",
-        "php": "^7.2.5 || ^8.0",
-        "psr/http-client": "^1.0"
+        "guzzlehttp/psr7": "2.7.1",
+        "php": "^8.1",
+        "psr/http-client": "1.0.3"
     },
     "suggest": {
         "php-http/curl-client": "CURL Client Adapter",
         "tuupola/http-factory": "HTTP Factory"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.6.19",
-        "vimeo/psalm": "5.23.1"
+        "phpunit/phpunit": "12.1.5",
+        "vimeo/psalm": "6.10.3"
     },
     "authors": [
         {
