--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "ext-json": "*",
         "guzzlehttp/psr7": "^2.6",
-        "php": "^7.2.5 || ^<=8.3",
+        "php": "^7.2.5 || <=8.3",
         "psr/http-client": "^1.0"
     },
     "suggest": {
