--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "ext-json": "*",
         "guzzlehttp/psr7": "2.7.1",
-        "php": "^8.1",
+        "php": ">=8.3",
         "psr/http-client": "1.0.3"
     },
     "suggest": {
